# okay-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
docs/img/: okay-gh-banner.kra
okay/: CMakeLists.txt  okay.hpp
okay-engine/scripts/: okay.py
okay-engine/scripts/core/: okay.cpp  okay.hpp
okay-engine/scripts/tools/: build_util.py  okay_br.py  okay_build.py  okay_run.py  raxel_test.py  tool_util.py
okay-game/: main.cpp
okay-game/.okay/: checksum.txt
okay/assets/shaders/: depth_map.frag  depth_map.vert  lit.frag  lit.vert  test.frag  test.vert  text_sdf.frag  text_sdf.vert  ui.vert  ui_rect.frag  ui_rect.vert  unlit.frag
okay/assets/textures/: exportCiteProcCitation.json
okay/core/: okay.cpp  okay.hpp  okay_renderer.hpp
okay/core/asset/: asset.hpp  asset_ref.hpp  asset_util.hpp  okay_asset.h  okay_asset.hpp  util.hpp
okay/core/asset/generic/: font_loader.hpp  shader_loader.hpp  string_loader.cpp  string_loader.h  string_loader.hpp  texture_loader.cpp  texture_loader.hpp
okay/core/asset/mesh/: mesh_loader.cpp  mesh_loader.hpp  obj_loader.cpp  obj_loader.hpp
okay/core/ecs/: builtins.hpp  ecs.cpp  ecs.hpp  ecs_util.hpp  ecstore.cpp  ecstore.hpp  okay_ecs.cpp  okay_ecs.hpp  query.hpp
okay/core/ecs/components/: camera_component.hpp  light_component.hpp  render_component.hpp  render_component.hpp.tmp0  text_component.hpp  transform_component.hpp  ui_component.hpp
okay/core/ecs/systems/: camera_system.hpp  light_system.hpp  renderer_system.hpp  ui_system.hpp
okay/core/engine/: engine.cpp  engine.hpp  event.hpp  logger.cpp  logger.hpp  okay_event.hpp  system.cpp  system.hpp  time.hpp
okay/core/graphics/: okay_surface.hpp
okay/core/graphics/glfw/: glfw_surface.hpp
okay/core/imgui/: imgui.cpp  imgui.hpp
okay/core/level/: okay_level.hpp  okay_level_manager.hpp
okay/core/logging/: okay_logger.cpp  okay_logger.hpp
okay/core/renderer/: font.hpp  gl.hpp  gpu.hpp  imgui_impl.hpp  material.cpp  material.hpp  math_types.hpp  mesh.cpp  mesh.hpp  okay_font.hpp  okay_gl.hpp  okay_gpu.hpp  okay_material.cpp  okay_material.hpp  okay_mesh.cpp  okay_mesh.hpp  okay_model.cpp  okay_model.hpp  okay_primitive.cpp  okay_primitive.hpp  okay_render_pass.hpp  okay_render_pipeline.hpp  okay_render_target.hpp  okay_render_world.cpp  okay_render_world.hpp  okay_renderer.cpp  okay_renderer.hpp  okay_shader.hpp  okay_surface.hpp  okay_text.hpp  okay_texture.hpp  okay_uniform.cpp  okay_uniform.hpp  primitive.cpp  primitive.hpp  render_pipeline.hpp  render_target.hpp  render_world.cpp  render_world.hpp  renderer.cpp  (+8 more)
okay/core/renderer/glfw/: glfw_surface.hpp
okay/core/renderer/imgui/: okay_imgui.cpp  okay_imgui.hpp
okay/core/renderer/materials/: depth_map.frag  depth_map.hpp  depth_map.vert  lit.hpp  text_sdf.hpp  ui_rect.hpp  unlit.hpp
okay/core/renderer/passes/: scene_pass.hpp
okay/core/system/: okay_system.cpp  okay_system.hpp
okay/core/tween/: i_okay_tween.hpp  okay_tween.cpp  okay_tween.hpp  okay_tween_collection.cpp  okay_tween_collection.hpp  okay_tween_easing.cpp  okay_tween_easing.hpp  okay_tween_engine.cpp  okay_tween_engine.hpp  okay_tween_sequence.cpp  okay_tween_sequence.hpp  tween.hpp  tween_collection.cpp  tween_collection.hpp  tween_easing.cpp  tween_easing.hpp  tween_engine.cpp  tween_engine.hpp  tween_sequence.cpp  tween_sequence.hpp
okay/core/ui/: builder.cpp  builder.hpp  element.cpp  element.hpp  font.cpp  font.hpp  node.hpp  render_resources.cpp  render_resources.hpp  text.hpp  text_layout.cpp  text_layout.hpp  text_mesh_buffer.hpp  text_mesh_builder.cpp  text_mesh_builder.hpp  ui.cpp  ui.hpp
okay/core/util/: dirty_set.hpp  format.hpp  object_pool.hpp  option.hpp  property.hpp  result.hpp  singleton.hpp  string.cpp  string.hpp  type.hpp  variant.hpp
okay/modules/tween/: i_okay_tween.hpp  tween_collection.cpp
okay/platform/: CMakeLists.txt
okay/platform/glfw/: CMakeLists.txt
okay/platform/macos/: CMakeLists.txt  glfw_surface.cpp  imgui_glfw.cpp
okay/platform/rpi/: CMakeLists.txt  egl_surface.cpp  egl_surface.hpp  imgui_egl.cpp
okay/platform/windows/: CMakeLists.txt  glfw_surface.cpp  glfw_surface.hpp  imgui_glfw.cpp
okay/platform/windows/glad/: gl.h
okay/scripts/: install.bash  okay.py
okay/scripts/tools/: build_util.py  okay_br.py  okay_branch.py  okay_build.py  okay_clean.py  okay_demo.py  okay_index.py  okay_init.py  okay_update.py  okay_where.py  raxel_update.py  tool_util.py
proto/core/: .clangd  main.cpp
proto/demo/: main.cpp
proto/ecs/: main.cpp
proto/imgui_rendering/: main.cpp
proto/test/: main.cpp
proto/test/assets/: user.txt
proto/text/: main.cpp  okay.cmake
proto/tween/: main.cpp
proto/ui/: main.cpp
scripts/: format.sh  generate_okay_header.py
